force-app/main/default/objects/IOM_Synchronization_Transaction__c/IOM_Synchronization_Transaction__c.object-meta.xml
<CustomObject>
    <description>Object to track syncing of data &amp; this will help in tracking errors while Sync.</description>
    <label>IOM Synchronization Transaction</label>
    <nameField>
        <displayFormat>IOMST-{000000}</displayFormat>
        <label>IOM Synchronization Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IOM Synchronization Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>