force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_3rd_Party_Relationship__c.field-meta.xml
<CustomField>
    <fullName>IOM_3rd_Party_Relationship__c</fullName>
    <description>IOM 3rd Party Relationship</description>
    <label>3rd Party Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IOM_3rd_Party_Relationship</valueSetName>
    </valueSet>
</CustomField>