force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_CRM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IOM_CRM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM Opportunity Id for which Transaction is Created.</description>
    <label>CRM Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>IOM Synchronization Transaction</relationshipLabel>
    <relationshipName>IOM_Synchronization_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>