force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_CRM_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>IOM_CRM_Opportunity_Id__c</fullName>
    <description>CRM Opportunity Id for which Transaction is Created.</description>
    <label>CRM Opportunity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>