force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Id in IOM.</description>
    <label>IOM Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>IOM Synchronization Transaction (IOM Opportunity)</relationshipLabel>
    <relationshipName>IOM_Synchronization_Transaction1</relationshipName>
    <type>Lookup</type>
</CustomField>