force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity_Id__c</fullName>
    <description>Opportunity Id in IOM.</description>
    <label>IOM Opportunity Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>