force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Processing_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IOM_Processing_Error_Message__c</fullName>
    <description>Processing Error Message if any.</description>
    <label>IOM Processing Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>