force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>IOM_Processing_Status__c</fullName>
    <description>Processing Status of Transation.</description>
    <label>IOM Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IOM_Processing_Status</valueSetName>
    </valueSet>
</CustomField>