force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>IOM_Request_Body__c</fullName>
    <description>Callout Request JSON.</description>
    <label>IOM Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>