force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>IOM_Response_Body__c</fullName>
    <description>Callout Response JSON.</description>
    <label>IOM Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>