force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>IOM_Response_Code__c</fullName>
    <description>Callout Response Code.</description>
    <label>IOM Response Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>