force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Synchronization_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IOM_Synchronization_Error_Message__c</fullName>
    <description>Synchronization Error Message if any in IOM.</description>
    <label>IOM Synchronization Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>