force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Synchronization_Status__c.field-meta.xml
<CustomField>
    <fullName>IOM_Synchronization_Status__c</fullName>
    <description>Synchronization Status of transaction in IOM.</description>
    <label>IOM Synchronization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IOM_Synchronization_Status</valueSetName>
    </valueSet>
</CustomField>