force-app/main/default/objects/IOM_Synchronization_Transaction__c/fields/IOM_Type__c.field-meta.xml
<CustomField>
    <fullName>IOM_Type__c</fullName>
    <description>Synchronization Transaction Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Sync</fullName>
            </value>
            <value>
                <fullName>Amendment Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>